--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio</title>
+    <!-- Bootstrap CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-nH8cbbzrS1LHCJEMZ5qEX5By0vxfUf2PQPfrt7zXpX1r8ILWj34uzX+K9gtxf1f2" crossorigin="anonymous">
     <style>
         body {
             background-color: #162447;
             font-family: 'Arial Narrow', sans-serif;
-            color: #0047ab; /* Alterado para azul cobalto */
+            color: #003171; /* Alterado para um tom mais escuro */
             margin: 0;
             padding: 0;
         }
@@ -70,7 +72,7 @@
                 <p>Confira meu perfil no <a href="https://www.linkedin.com/in/sara-virg%C3%ADnia-rocha/">LinkedIn</a>.</p>
             </div>
             <div class="chapter">
-                <h2>Trabalhos em HTML</h2>
+                <h2><i class="bi bi-code-slash"></i> Trabalhos em HTML</h2> <!-- Adicionado ícone Bootstrap -->
                 <p>Texto de introdução sobre os trabalhos em HTML com 5 linhas.</p>
                 <!-- Adicione aqui os trabalhos em HTML -->
                 <div class="gallery">
@@ -85,7 +87,7 @@
                 </div>
             </div>
             <div class="chapter">
-                <h2>Trabalhos em PowerApp</h2>
+                <h2><i class="bi bi-lightning"></i> Trabalhos em PowerApp</h2> <!-- Adicionado ícone Bootstrap -->
                 <p>Texto de introdução sobre os trabalhos em PowerApp com 5 linhas.</p>
                 <!-- Adicione aqui os trabalhos em PowerApp -->
                 <div class="gallery">
@@ -100,7 +102,7 @@
                 </div>
             </div>
             <div class="chapter">
-                <h2>Trabalhos em Power BI</h2>
+                <h2><i class="bi bi-bar-chart-line"></i> Trabalhos em Power BI</h2> <!-- Adicionado ícone Bootstrap -->
                 <p>Texto de introdução sobre os trabalhos em Power BI com 5 linhas.</p>
                 <!-- Adicione aqui os trabalhos em Power BI -->
                 <div class="gallery">
