--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="container">
         <div class="inner-container">
             <div class="profile-img">
-                <img src="caminho_para_a_sua_fotografia.jpg" alt="Minha Foto">
+                <img src="imgSV.png" alt="Minha Foto">
             </div>
             <div class="intro">
                 <h2>Sobre Mim</h2>
@@ -92,11 +92,11 @@
                 <!-- Adicione aqui os trabalhos em PowerApp -->
                 <div class="gallery">
                     <div class="gallery-item">
-                        <img src="caminho_para_a_foto_powerapp_1.jpg" alt="Foto PowerApp 1">
+                        <img src="icon_app_phone_PowerGymGirls.png" alt="foto app phone Power Gym Girls">
                         <p>Legenda da Foto PowerApp 1</p>
                     </div>
                     <div class="gallery-item">
-                        <img src="caminho_para_a_foto_powerapp_2.jpg" alt="Foto PowerApp 2">
+                        <img src="icon_app_tablet_PowerGymGirls" alt="foto app tablet Power Gym Girls">
                         <p>Legenda da Foto PowerApp 2</p>
                     </div>
                 </div>
