--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <p>Legenda da Foto PowerApp 1</p>
                     </div>
                     <div class="gallery-item">
-                        <img src="icon_app_tablet_PowerGymGirls" alt="foto app tablet Power Gym Girls">
+                        <img src="icon_app_tablet_PowerGymGirls.png" alt="foto app tablet Power Gym Girls">
                         <p>Legenda da Foto PowerApp 2</p>
                     </div>
                 </div>
