--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="container">
         <div class="inner-container">
             <div class="profile-img">
-                <img src="imgSV.png" alt="Minha Foto">
+                <img src="imgSV2blue.png" alt="Minha Foto">
             </div>
             <div class="intro">
                 <h2>Sobre Mim</h2>
