--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-nH8cbbzrS1LHCJEMZ5qEX5By0vxfUf2PQPfrt7zXpX1r8ILWj34uzX+K9gtxf1f2" crossorigin="anonymous">
     <style>
         body {
-            background-image: url('fundo.jpg'); /* Alterado para uma imagem de fundo */
+            background-image: url('imagensHide/fundo.jpg'); /* Alterado para uma imagem de fundo */
             background-size: cover; /* Garante que a imagem de fundo cubra toda a tela */
             font-family: 'Arial Narrow', sans-serif;
             color: #003171;
