--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-nH8cbbzrS1LHCJEMZ5qEX5By0vxfUf2PQPfrt7zXpX1r8ILWj34uzX+K9gtxf1f2" crossorigin="anonymous">
     <style>
         body {
-            background-image: url('imagensHide/fundo.jpg'); /* Alterado para uma imagem de fundo */
+            background-color: rgba(0, 0, 0, 0);
             background-size: cover; /* Garante que a imagem de fundo cubra toda a tela */
             font-family: 'Arial Narrow', sans-serif;
             color: #00204A; /* Alterado para um azul um pouco mais escuro */
@@ -85,7 +85,7 @@
     <div class="container">
         <div class="inner-container">
             <div class="profile-img">
-                <img src="imagensHide/imgSV2blue.jpg" alt="Minha Foto">
+                <img src="imagensHide/imgSV2.jpg" alt="Minha Foto">
                 <div class="name">Sara Virgínia</div> <!-- Nome do lado direito da imagem -->
             </div>
             <div class="intro">
