--- a/index.html
+++ b/index.html
@@ -8,27 +8,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-nH8cbbzrS1LHCJEMZ5qEX5By0vxfUf2PQPfrt7zXpX1r8ILWj34uzX+K9gtxf1f2" crossorigin="anonymous">
     <style>
         body {
-            background-color: rgba(0, 0, 0, 0);
-            background-size: cover; /* Garante que a imagem de fundo cubra toda a tela */
+            background-color: #000; /* Fundo preto */
             font-family: 'Arial Narrow', sans-serif;
-            color: #00204A; /* Alterado para um azul um pouco mais escuro */
+            color: #00204A; /* Azul escuro */
             margin: 0;
             padding: 0;
         }
         .container {
             width: 80%;
             margin: 50px auto;
-            background-color: rgba(255, 255, 255, 0.8); /* Adicionado um fundo branco semi-transparente */
+            background-color: rgba(255, 255, 255, 0.8); /* Fundo branco semi-transparente */
             border-radius: 20px;
             overflow: hidden;
-        }
-        .inner-container {
-            padding: 20px;
+            padding: 20px; /* Adicionado padding */
         }
         .profile-img {
             width: 150px;
             height: 150px;
-            border-radius: 50%;
+            border-radius: 50%; /* Transforma a imagem em círculo */
             overflow: hidden;
             float: left;
             margin-right: 20px;
@@ -36,13 +33,14 @@
         .profile-img img {
             max-width: 100%;
             height: auto;
+            border: 2px solid #003171; /* Adiciona uma borda azul à imagem */
+        }
+        .name {
+            line-height: 150px; /* Centraliza verticalmente com a imagem */
+            color: #003171; /* Cor do nome */
         }
         .intro {
             margin-top: 20px; /* Adicionado um pequeno espaço acima do texto */
-        }
-        .name {
-            float: right; /* Nome do lado direito da imagem */
-            color: #003171; /* Cor do nome */
         }
         .chapter {
             margin-top: 50px;
@@ -83,63 +81,61 @@
 </head>
 <body>
     <div class="container">
-        <div class="inner-container">
-            <div class="profile-img">
-                <img src="imagensHide/imgSV2.jpg" alt="Minha Foto">
-                <div class="name">Sara Virgínia</div> <!-- Nome do lado direito da imagem -->
+        <div class="profile-img">
+            <img src="imagensHide/imgSV2.jpg" alt="Minha Foto">
+        </div>
+        <div class="name">Sara Virgínia</div> <!-- Nome na mesma linha da fotografia -->
+        <div class="intro">
+            <p>Texto de introdução com 5 linhas.</p>
+            <p>Confira meu perfil no <a href="https://www.linkedin.com/in/sara-virg%C3%ADnia-rocha/">LinkedIn</a>.</p>
+            <div class="social-icons">
+                <!-- Ícones de acesso ao Instagram e GitHub -->
+                <a href="https://www.instagram.com/seu_perfil_do_instagram"><i class="bi bi-instagram"></i></a>
+                <a href="https://github.com/seu_perfil_do_github"><i class="bi bi-github"></i></a>
             </div>
-            <div class="intro">
-                <p>Texto de introdução com 5 linhas.</p>
-                <p>Confira meu perfil no <a href="https://www.linkedin.com/in/sara-virg%C3%ADnia-rocha/">LinkedIn</a>.</p>
-                <div class="social-icons">
-                    <!-- Ícones de acesso ao Instagram e GitHub -->
-                    <a href="https://www.instagram.com/seu_perfil_do_instagram"><i class="bi bi-instagram"></i></a>
-                    <a href="https://github.com/seu_perfil_do_github"><i class="bi bi-github"></i></a>
+        </div>
+        <div class="chapter">
+            <h2><i class="bi bi-code-slash"></i> Trabalhos em HTML</h2>
+            <p>Texto de introdução sobre os trabalhos em HTML com 5 linhas.</p>
+            <!-- Adicione aqui os trabalhos em HTML -->
+            <div class="gallery">
+                <div class="gallery-item">
+                    <img src="caminho_para_a_foto_html_1.jpg" alt="Foto HTML 1">
+                    <p>Legenda da Foto HTML 1</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="caminho_para_a_foto_html_2.jpg" alt="Foto HTML 2">
+                    <p>Legenda da Foto HTML 2</p>
                 </div>
             </div>
-            <div class="chapter">
-                <h2><i class="bi bi-code-slash"></i> Trabalhos em HTML</h2>
-                <p>Texto de introdução sobre os trabalhos em HTML com 5 linhas.</p>
-                <!-- Adicione aqui os trabalhos em HTML -->
-                <div class="gallery">
-                    <div class="gallery-item">
-                        <img src="caminho_para_a_foto_html_1.jpg" alt="Foto HTML 1">
-                        <p>Legenda da Foto HTML 1</p>
-                    </div>
-                    <div class="gallery-item">
-                        <img src="caminho_para_a_foto_html_2.jpg" alt="Foto HTML 2">
-                        <p>Legenda da Foto HTML 2</p>
-                    </div>
+        </div>
+        <div class="chapter">
+            <h2><i class="bi bi-lightning"></i> Trabalhos em PowerApp</h2>
+            <p>Texto de introdução sobre os trabalhos em PowerApp com 5 linhas.</p>
+            <!-- Adicione aqui os trabalhos em PowerApp -->
+            <div class="gallery">
+                <div class="gallery-item">
+                    <img src="icon_app_phone_PowerGymGirls.png" alt="foto app phone Power Gym Girls">
+                    <p>Legenda da Foto PowerApp 1</p>
+                </div>
+                <div class="gallery-item">
+                    <img src="icon_app_tablet_PowerGymGirls.png" alt="foto app tablet Power Gym Girls">
+                    <p>Legenda da Foto PowerApp 2</p>
                 </div>
             </div>
-            <div class="chapter">
-                <h2><i class="bi bi-lightning"></i> Trabalhos em PowerApp</h2>
-                <p>Texto de introdução sobre os trabalhos em PowerApp com 5 linhas.</p>
-                <!-- Adicione aqui os trabalhos em PowerApp -->
-                <div class="gallery">
-                    <div class="gallery-item">
-                        <img src="icon_app_phone_PowerGymGirls.png" alt="foto app phone Power Gym Girls">
-                        <p>Legenda da Foto PowerApp 1</p>
-                    </div>
-                    <div class="gallery-item">
-                        <img src="icon_app_tablet_PowerGymGirls.png" alt="foto app tablet Power Gym Girls">
-                        <p>Legenda da Foto PowerApp 2</p>
-                    </div>
+        </div>
+        <div class="chapter">
+            <h2><i class="bi bi-bar-chart-line"></i> Trabalhos em Power BI</h2>
+            <p>Texto de introdução sobre os trabalhos em Power BI com 5 linhas.</p>
+            <!-- Adicione aqui os trabalhos em Power BI -->
+            <div class="gallery">
+                <div class="gallery-item">
+                    <img src="caminho_para_a_foto_powerbi_1.jpg" alt="Foto Power BI 1">
+                    <p>Legenda da Foto Power BI 1</p>
                 </div>
-            </div>
-            <div class="chapter">
-                <h2><i class="bi bi-bar-chart-line"></i> Trabalhos em Power BI</h2>
-                <p>Texto de introdução sobre os trabalhos em Power BI com 5 linhas.</p>
-                <!-- Adicione aqui os trabalhos em Power BI -->
-                <div class="gallery">
-                    <div class="gallery-item">
-                        <img src="caminho_para_a_foto_powerbi_1.jpg" alt="Foto Power BI 1">
-                        <p>Legenda da Foto Power BI 1</p>
-                    </div>
-                    <div class="gallery-item">
-                        <img src="caminho_para_a_foto_powerbi_2.jpg" alt="Foto Power BI 2">
-                        <p>Legenda da Foto Power BI 2</p>
-                    </div>
+                <div class="gallery-item">
+                    <img src="caminho_para_a_foto_powerbi_2.jpg" alt="Foto Power BI 2">
+                    <p>Legenda da Foto Power BI 2</p>
                 </div>
             </div>
         </div>
