--- a/index.html
+++ b/index.html
@@ -28,16 +28,17 @@
             border-radius: 50%; /* Transforma a imagem em círculo */
             overflow: hidden;
             float: left;
-            margin-right: 20px;
+            margin-right: 40px; /* Afastar um pouco mais da fotografia */
         }
         .profile-img img {
-            max-width: 100%;
-            height: auto;
-            border: 2px solid #003171; /* Adiciona uma borda azul à imagem */
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
         .name {
             line-height: 150px; /* Centraliza verticalmente com a imagem */
-            color: #003171; /* Cor do nome */
+            color: #162447; /* Cor do nome igual aos títulos dos capítulos */
+            font-size: 24px; /* Mesmo tamanho de fonte dos títulos dos capítulos */
         }
         .intro {
             margin-top: 20px; /* Adicionado um pequeno espaço acima do texto */
@@ -66,6 +67,7 @@
             border-bottom: 1px solid #162447;
             padding-bottom: 10px;
             margin-bottom: 20px;
+            color: #162447; /* Cor dos títulos dos capítulos */
         }
         .social-icons {
             margin-top: 20px;
@@ -86,13 +88,15 @@
         </div>
         <div class="name">Sara Virgínia</div> <!-- Nome na mesma linha da fotografia -->
         <div class="intro">
-            <p>Texto de introdução com 5 linhas.</p>
-            <p>Confira meu perfil no <a href="https://www.linkedin.com/in/sara-virg%C3%ADnia-rocha/">LinkedIn</a>.</p>
-            <div class="social-icons">
-                <!-- Ícones de acesso ao Instagram e GitHub -->
-                <a href="https://www.instagram.com/seu_perfil_do_instagram"><i class="bi bi-instagram"></i></a>
-                <a href="https://github.com/seu_perfil_do_github"><i class="bi bi-github"></i></a>
-            </div>
+            <p>I am a urban planning architect by background, but I am upskilling myself in the IT field and focusing on low-code and power platform technologies. My motivation to invest in this area and improve my skills stems from...</p>
+            <p>...the increasing importance of technology in urban planning and architecture, and the need for professionals who can bridge the gap between traditional architecture/planning and modern technology solutions.</p>
+            <p>Furthermore, I am passionate about leveraging technology to create sustainable and efficient urban environments that enhance the quality of life for residents.</p>
+            <p>Through continuous learning and development in the IT field, I aim to become a versatile professional capable of integrating innovative digital solutions into urban planning projects.</p>
+            <p>I am excited about the possibilities that low-code and power platform technologies offer in streamlining processes, fostering collaboration, and driving impactful change in the built environment.</p>
+            <p>My goal is to contribute to the development of smart cities and resilient communities by harnessing the power of technology to address complex urban challenges.</p>
+            <p>By combining my architectural expertise with advanced IT skills, I strive to create holistic solutions that address both the physical and digital aspects of urban development.</p>
+            <p>Ultimately, I believe that embracing technology is essential for shaping the cities of the future, and I am committed to being at the forefront of this transformative journey.</p>
+            <p>Let's build a smarter, more sustainable future together!</p>
         </div>
         <div class="chapter">
             <h2><i class="bi bi-code-slash"></i> Trabalhos em HTML</h2>
