--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             border-radius: 20px;
             overflow: hidden;
             padding: 20px; /* Adicionado padding */
+            box-shadow: 0 0 10px rgba(0,0,0,0.5); /* Sombra à volta do container */
         }
         .profile-img {
             width: 150px;
@@ -29,6 +30,7 @@
             overflow: hidden;
             float: left;
             margin-right: 40px; /* Afastar um pouco mais da fotografia */
+            box-shadow: 0 0 10px rgba(0,0,0,0.5); /* Sombra à volta da imagem */
         }
         .profile-img img {
             width: 100%;
@@ -39,6 +41,7 @@
             line-height: 150px; /* Centraliza verticalmente com a imagem */
             color: #162447; /* Cor do nome igual aos títulos dos capítulos */
             font-size: 24px; /* Mesmo tamanho de fonte dos títulos dos capítulos */
+            font-weight: bold; /* Negrito */
         }
         .intro {
             margin-top: 20px; /* Adicionado um pequeno espaço acima do texto */
@@ -87,17 +90,17 @@
             <img src="imagensHide/imgSV2.jpg" alt="Minha Foto">
         </div>
         <div class="name">Sara Virgínia</div> <!-- Nome na mesma linha da fotografia -->
-        <div class="intro">
-            <p>I am a urban planning architect by background, but I am upskilling myself in the IT field and focusing on low-code and power platform technologies. My motivation to invest in this area and improve my skills stems from...</p>
-            <p>...the increasing importance of technology in urban planning and architecture, and the need for professionals who can bridge the gap between traditional architecture/planning and modern technology solutions.</p>
-            <p>Furthermore, I am passionate about leveraging technology to create sustainable and efficient urban environments that enhance the quality of life for residents.</p>
-            <p>Through continuous learning and development in the IT field, I aim to become a versatile professional capable of integrating innovative digital solutions into urban planning projects.</p>
-            <p>I am excited about the possibilities that low-code and power platform technologies offer in streamlining processes, fostering collaboration, and driving impactful change in the built environment.</p>
-            <p>My goal is to contribute to the development of smart cities and resilient communities by harnessing the power of technology to address complex urban challenges.</p>
-            <p>By combining my architectural expertise with advanced IT skills, I strive to create holistic solutions that address both the physical and digital aspects of urban development.</p>
-            <p>Ultimately, I believe that embracing technology is essential for shaping the cities of the future, and I am committed to being at the forefront of this transformative journey.</p>
-            <p>Let's build a smarter, more sustainable future together!</p>
-        </div>
+    <div class="intro">
+        <h1>Architect and Urban Designer</h1>
+        <p>Hello, Future Employer! 👋</p>
+        <p>With a solid foundation in architecture and urban design, I am embarking on an exciting journey—a shift toward the dynamic realm of <strong>Information Technology (IT)</strong>. Here's why you should take notice:</p>
+        <ul>
+            <li><strong>Urban Insight and Innovation:</strong> My architectural background provides a unique lens for understanding urban spaces. Now, I'm channeling that creativity into mastering the <strong>Power Platform</strong>, where low-code magic meets real-world solutions.</li>
+            <li><strong>Bridging Disciplines:</strong> By upskilling in IT, I aim to bridge the gap between traditional design principles and cutting-edge technology. Imagine the possibilities when architecture meets data-driven insights!</li>
+            <li><strong>Holistic Solutions:</strong> My goal? To create holistic solutions that seamlessly integrate physical and digital aspects of urban development. From blueprints to dashboards, I'm committed to shaping smarter, more sustainable cities.</li>
+            <li><strong>Transformative Journey:</strong> Join me on this transformative journey as we harness the power of technology to build resilient communities and shape the cities of tomorrow.</li>
+        </ul>
+    </div>
         <div class="chapter">
             <h2><i class="bi bi-code-slash"></i> Trabalhos em HTML</h2>
             <p>Texto de introdução sobre os trabalhos em HTML com 5 linhas.</p>
