--- a/index.html
+++ b/index.html
@@ -91,16 +91,16 @@
         </div>
         <div class="name">Sara Virgínia</div> <!-- Nome na mesma linha da fotografia -->
     <div class="intro">
-        <h1>Architect and Urban Designer</h1>
-        <p>Hello, Future Employer! 👋</p>
-        <p>With a solid foundation in architecture and urban design, I am embarking on an exciting journey—a shift toward the dynamic realm of <strong>Information Technology (IT)</strong>. Here's why you should take notice:</p>
-        <ul>
-            <li><strong>Urban Insight and Innovation:</strong> My architectural background provides a unique lens for understanding urban spaces. Now, I'm channeling that creativity into mastering the <strong>Power Platform</strong>, where low-code magic meets real-world solutions.</li>
-            <li><strong>Bridging Disciplines:</strong> By upskilling in IT, I aim to bridge the gap between traditional design principles and cutting-edge technology. Imagine the possibilities when architecture meets data-driven insights!</li>
-            <li><strong>Holistic Solutions:</strong> My goal? To create holistic solutions that seamlessly integrate physical and digital aspects of urban development. From blueprints to dashboards, I'm committed to shaping smarter, more sustainable cities.</li>
-            <li><strong>Transformative Journey:</strong> Join me on this transformative journey as we harness the power of technology to build resilient communities and shape the cities of tomorrow.</li>
-        </ul>
-    </div>
+    <h1>Architect and Urban Designer</h1>
+    <p>Dear Prospective Employer,</p>
+    <p>As an experienced architect and urban designer, I bring a wealth of knowledge and expertise to the table. However, I am also excited to share my recent journey into the realm of Information Technology (IT), particularly through the robust Power Platform ecosystem. Allow me to elaborate:</p>
+    <ul>
+        <li><strong>Power Platform Proficiency:</strong> Leveraging my architectural background, I have delved into mastering various tools within the Power Platform, including Power Apps, Power Automate, Power BI, and SharePoint. Through these platforms, I am equipped to develop innovative solutions that seamlessly blend design principles with advanced technological capabilities.</li>
+        <li><strong>Bridging Traditional and Modern:</strong> My transition into IT represents a conscious effort to bridge the gap between traditional architectural practices and modern technological advancements. By harnessing the power of low-code development and data-driven insights, I aim to revolutionize how we approach urban planning and design.</li>
+        <li><strong>Integrated Solutions:</strong> My vision extends beyond standalone applications; I aspire to create integrated solutions that harmoniously incorporate both physical and digital elements of urban development. From intuitive Power Apps interfaces to dynamic Power BI dashboards, I am committed to delivering comprehensive solutions that address the complex challenges of modern urban environments.</li>
+        <li><strong>Transformative Impact:</strong> Join me on this transformative journey as we explore the limitless potential of technology to reshape our cities and communities. Together, we can leverage the Power Platform to drive meaningful change and build a brighter, more sustainable future.</li>
+    </ul>
+</div>
         <div class="chapter">
             <h2><i class="bi bi-code-slash"></i> Trabalhos em HTML</h2>
             <p>Texto de introdução sobre os trabalhos em HTML com 5 linhas.</p>
