--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
             <img src="imagensHide/imgSV2.jpg" alt="Minha Foto">
         </div>
         <div class="name">Sara Virgínia</div> <!-- Nome na mesma linha da fotografia -->
-    <div class="intro">
+<div class="intro">
     <h1>Architect and Urban Designer</h1>
-    <p>Dear Prospective Employer,</p>
-    <p>As an experienced architect and urban designer, I bring a wealth of knowledge and expertise to the table. However, I am also excited to share my recent journey into the realm of Information Technology (IT), particularly through the robust Power Platform ecosystem. Allow me to elaborate:</p>
+    <p>Hello, and welcome!</p>
+    <p>As a seasoned architect and urban designer, I am thrilled to embark on a new chapter in my career—one that revolves around the dynamic world of Information Technology (IT), with a particular emphasis on the Microsoft Power Platform. Allow me to share why this transition is both exciting and promising:</p>
     <ul>
-        <li><strong>Power Platform Proficiency:</strong> Leveraging my architectural background, I have delved into mastering various tools within the Power Platform, including Power Apps, Power Automate, Power BI, and SharePoint. Through these platforms, I am equipped to develop innovative solutions that seamlessly blend design principles with advanced technological capabilities.</li>
-        <li><strong>Bridging Traditional and Modern:</strong> My transition into IT represents a conscious effort to bridge the gap between traditional architectural practices and modern technological advancements. By harnessing the power of low-code development and data-driven insights, I aim to revolutionize how we approach urban planning and design.</li>
-        <li><strong>Integrated Solutions:</strong> My vision extends beyond standalone applications; I aspire to create integrated solutions that harmoniously incorporate both physical and digital elements of urban development. From intuitive Power Apps interfaces to dynamic Power BI dashboards, I am committed to delivering comprehensive solutions that address the complex challenges of modern urban environments.</li>
-        <li><strong>Transformative Impact:</strong> Join me on this transformative journey as we explore the limitless potential of technology to reshape our cities and communities. Together, we can leverage the Power Platform to drive meaningful change and build a brighter, more sustainable future.</li>
+        <li><strong>Power Platform Expertise:</strong> With a solid foundation in architecture and urban design, I have immersed myself in mastering various tools within the Microsoft Power Platform, including Power Apps, Power Automate, Power BI, and SharePoint. As a certified PL900 professional, I am well-versed in leveraging these technologies to develop innovative solutions that bridge the gap between design principles and cutting-edge IT.</li>
+        <li><strong>Low-Code and High-Code Proficiency:</strong> My journey into IT represents a deliberate shift toward gaining hands-on experience in both low-code and high-code development. Whether it's building intuitive Power Apps interfaces or diving into complex coding challenges, I am committed to honing my skills across the entire spectrum of software development.</li>
+        <li><strong>Microsoft-Centric Approach:</strong> I am particularly drawn to the Microsoft ecosystem for its comprehensive suite of tools and resources tailored to developers and IT professionals. By aligning myself with Microsoft technologies, I aim to broaden my horizons and explore new avenues for growth and innovation in the IT industry.</li>
+        <li><strong>Transformative Impact:</strong> Join me on this transformative journey as we harness the power of technology to drive meaningful change and shape the future of urban development. Together, we can leverage the Microsoft Power Platform to create smarter, more sustainable cities and communities.</li>
     </ul>
 </div>
         <div class="chapter">
