--- a/index.html
+++ b/index.html
@@ -89,9 +89,8 @@
         <div class="profile-img">
             <img src="imagensHide/imgSV2.jpg" alt="Minha Foto">
         </div>
-        <div class="name">Sara Virgínia</div> <!-- Nome na mesma linha da fotografia -->
+        <div class="name"><h2>Sara Virgínia</h2>h2</div> <!-- Nome na mesma linha da fotografia -->
 <div class="intro">
-    <h1>Architect and Urban Designer</h1>
     <p>Hello, and welcome!</p>
     <p>As a seasoned architect and urban designer, I am thrilled to embark on a new chapter in my career—one that revolves around the dynamic world of Information Technology (IT), with a particular emphasis on the Microsoft Power Platform. Allow me to share why this transition is both exciting and promising:</p>
     <ul>
