--- a/index.html
+++ b/index.html
@@ -89,9 +89,8 @@
         <div class="profile-img">
             <img src="imagensHide/imgSV2.jpg" alt="Minha Foto">
         </div>
-        <div class="name"><h2>Sara Virgínia</h2>h2</div> <!-- Nome na mesma linha da fotografia -->
+        <div class="name"><h2>Sara Virgínia</h2></div> <!-- Nome na mesma linha da fotografia -->
 <div class="intro">
-    <p>Hello, and welcome!</p>
     <p>As a seasoned architect and urban designer, I am thrilled to embark on a new chapter in my career—one that revolves around the dynamic world of Information Technology (IT), with a particular emphasis on the Microsoft Power Platform. Allow me to share why this transition is both exciting and promising:</p>
     <ul>
         <li><strong>Power Platform Expertise:</strong> With a solid foundation in architecture and urban design, I have immersed myself in mastering various tools within the Microsoft Power Platform, including Power Apps, Power Automate, Power BI, and SharePoint. As a certified PL900 professional, I am well-versed in leveraging these technologies to develop innovative solutions that bridge the gap between design principles and cutting-edge IT.</li>
